# security_monitoring_flow

./: README.md  pyproject.toml
src/security_monitoring_flow/: main.py
src/security_monitoring_flow/crews/security_crew/: security_crew.py
src/security_monitoring_flow/crews/security_crew/config/: agents.yaml  tasks.yaml
src/security_monitoring_flow/tools/: custom_tool.py
