[project]
name = "security_monitoring_flow"
version = "0.1.0"
description = "security_monitoring_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
]

[project.scripts]
kickoff = "security_monitoring_flow.main:kickoff"
run_crew = "security_monitoring_flow.main:kickoff"
plot = "security_monitoring_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
